In machine_learning_template.ipynb > Modeling > Final model section: Update next steps explanation in markdown documentation

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6987,20 +6987,16 @@
     "        <li><code>class_weight=\"balanced\"</code></li>\n",
     "    </ul>\n",
     "    <strong>Next steps</strong> <br>\n",
-    "    🎯 Evaluate the final model on training, validation, and test data to confirm its generalizability: \n",
     "    <ul>\n",
-    "        <li>Metrics</li>\n",
-    "        <li>Classification report</li>\n",
-    "        <li>Confusion matrix</li>\n",
-    "        <li>Overfitting</li>\n",
-    "        <li>Feature misclassification analysis</li>\n",
+    "        <li>Evaluate the final model on the training, validation, and test sets to confirm its generalizability.</li>\n",
+    "        <li>Use the same performance metrics as for the baseline and hyperparameter-tuned models \n",
+    "            (accuracy, recall, precision, F1-score, ROC-AUC, AUC-PR) along with additional diagnostics \n",
+    "            (classification report, confusion matrix, overfitting, feature misclassification analysis).\n",
+    "        </li>\n",
+    "        <li>In addition, conduct a feature importance analysis and review model prediction examples \n",
+    "            to further interpret and validate model behavior.\n",
+    "        </li>\n",
     "    </ul>\n",
-    "    🔍 Additional analyses:\n",
-    "    <ul>\n",
-    "        <li>Feature importance</li>\n",
-    "        <li>Model prediction examples</li>\n",
-    "    </ul>\n",
-    "</p> \n",
     "</div>"
    ]
   },
