In machine_learning_template.ipynb > Modeling > Final Model section: Rename Training Final Model section to Retraining and get best parameters from random search

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7006,31 +7006,29 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
-    "    <h3 style=\"margin:0px\">Training Final Model</h3>\n",
+    "    <h3 style=\"margin:0px\">Retraining</h3>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Retrain the final model with optimized hyperparameters and save it to a <code>.pkl</code> file in the <code>model</code> directory.\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "362036ce-5d52-4ba6-b0ac-bf7cd78742ac",
+   "id": "6cd443a0-a947-4464-a094-b396b19c7beb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize model\n",
-    "final_model = XGBClassifier(\n",
-    "    n_estimators=300, \n",
-    "    max_depth=4, \n",
-    "    learning_rate=0.1,\n",
-    "    subsample=0.8, \n",
-    "    colsample_bytree=0.8, \n",
-    "    gamma=0.1,\n",
-    "    min_child_weight=3, \n",
-    "    random_state=42\n",
-    ")\n",
+    "# Initialize model with tuned hyperparameters (Random Forest example)\n",
+    "final_model = RandomForestClassifier(**rf_random_search.best_params_, random_state=42)\n",
     "\n",
-    "# Train model\n",
-    "final_model.fit(X_train_transformed, y_train)"
+    "# Fit model\n",
+    "final_model.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Save final model as .pkl file \n",
+    "save_model(final_model, \"final_model.pkl\")"
    ]
   },
   {
