In machine_learning_template.ipynb > Modeling > Baseline Models > Metrics section: Rename model_comparison to baseline_model_comparison

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5190,7 +5190,7 @@
     "baseline_model_results = load_model(\"baseline_models.pkl\")\n",
     "\n",
     "# Extract evaluation metrics\n",
-    "model_comparison = {\n",
+    "baseline_model_comparison = {\n",
     "    model_name: {\n",
     "        metric: baseline_model_results[model_name][metric]\n",
     "        for metric in [\"Accuracy\", \"Recall\", \"Precision\", \"F1-Score\", \"ROC-AUC\", \"AUC-PR\"]\n",
@@ -5199,10 +5199,10 @@
     "}\n",
     "\n",
     "# Convert the dictionary to a DataFrame \n",
-    "model_comparison = pd.DataFrame(model_comparison).transpose()\n",
+    "baseline_model_comparison = pd.DataFrame(baseline_model_comparison).transpose()\n",
     "\n",
     "# Show model comparison table\n",
-    "round(model_comparison, 2)"
+    "round(baseline_model_comparison, 2)"
    ]
   },
   {
