In machine_learning_template.ipynb > Modeling > Final Model > Retraining section: Apply optimized threshold to obtain predicted values on the training, validation, and test sets

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7033,6 +7033,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "548ef7e4-37d0-44da-a98f-e5717847665b",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Apply optimized threshold to obtain predicted values on the training, validation, and test sets.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c822855-1ebf-440e-8844-9e51cbfb6e7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load final model\n",
+    "final_model = load_model(\"final_model.pkl\")\n",
+    "\n",
+    "# Predict probabilities for class-1 on the training, validation and test data\n",
+    "y_train_proba = final_model.predict_proba(X_train_transformed)[:, 1]\n",
+    "y_val_proba = final_model.predict_proba(X_val_transformed)[:, 1]\n",
+    "y_test_proba = final_model.predict_proba(X_test_transformed)[:, 1]\n",
+    "\n",
+    "# Apply optimized threshold to convert probabilities to binary predictions\n",
+    "threshold = tuned_threshold_model_results[\"Random Forest\"][\"best_threshold\"]  # Random Forest example\n",
+    "y_train_pred = (y_train_proba >= threshold).astype(int)\n",
+    "y_val_pred = (y_val_proba >= threshold).astype(int)\n",
+    "y_test_pred = (y_test_proba >= threshold).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4f4906c4-3902-4059-9613-e273e834f4b5",
    "metadata": {},
    "source": [
