In machine_learning_template.ipynb > Modeling > Final Model section: Replace Model Evaluation section with Metrics section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7069,148 +7069,69 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
-    "    <h3 style=\"margin:0px\">Model Evaluation</h3>\n",
+    "    <h3 style=\"margin:0px\">Metrics</h3>\n",
     "</div>\n",
     "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    <strong>Metrics: Classification Report</strong> <br> \n",
-    "    📌 Evaluate model performance using metrics (accuracy, precision, recall, F1-score) with a classification report for training, validation, and test data.\n",
+    "    📌 Compare evaluation metrics of the final model on the training, validation, and test sets.\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d8f3ac3-d961-4a3d-89c4-f9186d6cada3",
+   "id": "30e1d89c-e111-48b7-977f-46ff991467f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Predict on the training, validation and test data\n",
-    "y_train_pred = final_model.predict(X_train_transformed)\n",
-    "y_val_pred = final_model.predict(X_val_transformed)\n",
-    "y_test_pred = final_model.predict(X_test_transformed)\n",
+    "# --- Calculate evaluation metrics ---\n",
+    "# Accuracy\n",
+    "accuracy_train = accuracy_score(y_train, y_train_pred)\n",
+    "accuracy_val = accuracy_score(y_val, y_val_pred)\n",
+    "accuracy_test = accuracy_score(y_test, y_test_pred)\n",
     "\n",
-    "# Classification report\n",
-    "print(\"Training Classification Report:\")\n",
-    "print(classification_report(y_train, y_train_pred))\n",
-    "print(\"Validation Classification Report:\")\n",
-    "print(classification_report(y_val, y_val_pred))\n",
-    "print(\"Test Classification Report:\")\n",
-    "print(classification_report(y_test, y_test_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "723146ed-7699-4f95-a78d-5989c143e93d",
-   "metadata": {},
-   "source": [
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    <strong>Error Analysis: Confusion Matrix</strong> <br> \n",
-    "    📌 Show misclassifications using a confusion matrix for training, validation, and test data.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3003f782-6089-40b6-99ea-6a7883285aaa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Confusion matrix\n",
-    "print(\"Training Confusion Matrix:\")\n",
-    "cm_train = confusion_matrix(y_train, y_train_pred)\n",
-    "cm_disp_train = ConfusionMatrixDisplay(confusion_matrix=cm_train, display_labels=final_model.classes_)\n",
-    "cm_disp_train.plot(cmap=\"Blues\")\n",
-    "plt.title(\"Training Confusion Matrix\")\n",
-    "plt.show()\n",
+    "# Recall \n",
+    "recall_train = recall_score(y_train, y_train_pred)\n",
+    "recall_val = recall_score(y_val, y_val_pred)\n",
+    "recall_test = recall_score(y_test, y_test_pred)\n",
     "\n",
-    "print(\"Validation Confusion Matrix:\")\n",
-    "cm_val = confusion_matrix(y_val, y_val_pred)\n",
-    "cm_disp_val = ConfusionMatrixDisplay(confusion_matrix=cm_val, display_labels=final_model.classes_)\n",
-    "cm_disp_val.plot(cmap=\"Blues\")\n",
-    "plt.title(\"Validation Confusion Matrix\")\n",
-    "plt.show()\n",
+    "# Precision \n",
+    "precision_train = precision_score(y_train, y_train_pred)\n",
+    "precision_val = precision_score(y_val, y_val_pred)\n",
+    "precision_test = precision_score(y_test, y_test_pred)\n",
     "\n",
-    "print(\"Test Confusion Matrix:\")\n",
-    "cm_test = confusion_matrix(y_test, y_test_pred)\n",
-    "cm_disp_test = ConfusionMatrixDisplay(confusion_matrix=cm_test, display_labels=final_model.classes_)\n",
-    "cm_disp_test.plot(cmap=\"Blues\")\n",
-    "plt.title(\"Test Confusion Matrix\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "03346c9a-c921-4953-a378-2b9c58aa02e8",
-   "metadata": {},
-   "source": [
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    <strong>Error Analysis: Features Relationships with Misclassifications</strong> <br> \n",
-    "    📌 Explore relationships between the features and misclassifications through correlations and scatterplots on the test data.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "898f0271-132c-43f9-bcf5-133d922680b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Combine X_test, y_test, and y_test_pred into one DataFrame\n",
-    "df_test = X_test.copy()  \n",
-    "df_test[\"Actual\"] = y_test\n",
-    "df_test[\"Predicted\"] = y_test_pred\n",
+    "# F1-score\n",
+    "f1_train = f1_score(y_train, y_train_pred)\n",
+    "f1_val = f1_score(y_val, y_val_pred)\n",
+    "f1_test = f1_score(y_test, y_test_pred)\n",
     "\n",
-    "# Calculate misclassifications \n",
-    "df_test[\"Misclassification\"] = df_test[\"Predicted\"] != df_test[\"Actual\"]\n",
+    "# ROC-AUC\n",
+    "roc_auc_train = roc_auc_score(y_train, y_train_proba)\n",
+    "roc_auc_val = roc_auc_score(y_val, y_val_proba)\n",
+    "roc_auc_test = roc_auc_score(y_test, y_test_proba)\n",
     "\n",
-    "# Correlations between features and misclassifications\n",
-    "# Note: Ensure numerical_columns and boolean_columns were defined in exploratory data analysis section \n",
-    "df_test[numerical_columns + boolean_columns].corr()[\"Misclassification\"].sort_values(ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "747867bb-948e-433d-a47e-9faf41d7b2b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Scatterplot matrix between (numerical or boolean) features and misclassifications\n",
-    "import math\n",
+    "# AUC-PR\n",
+    "precision_curve_train, recall_curve_train, _ = precision_recall_curve(y_train, y_train_proba)\n",
+    "auc_pr_train = auc(recall_curve_train, precision_curve_train)\n",
+    "precision_curve_val, recall_curve_val, _ = precision_recall_curve(y_val, y_val_proba)\n",
+    "auc_pr_val = auc(recall_curve_val, precision_curve_val)\n",
+    "precision_curve_test, recall_curve_test, _ = precision_recall_curve(y_test, y_test_proba)\n",
+    "auc_pr_test = auc(recall_curve_test, precision_curve_test)\n",
     "\n",
-    "# Features to plot: All numerical and boolean columns excluding the target variable\n",
-    "features_to_plot = [col for col in numerical_columns + boolean_columns if col != \"categorical_target\"]\n",
+    "# --- Comparison table of evaluation metrics ---\n",
+    "# Create comparison table\n",
+    "final_model_comparison = pd.DataFrame({\n",
+    "    \"Data\": [\"Training\", \"Validation\", \"Test\"],\n",
+    "    \"Accuracy\": [accuracy_train, accuracy_val, accuracy_test],\n",
+    "    \"Recall\": [recall_train, recall_val, recall_test],\n",
+    "    \"Precision\": [precision_train, precision_val, precision_test],\n",
+    "    \"F1-Score\": [f1_train, f1_val, f1_test],\n",
+    "    \"ROC-AUC\": [roc_auc_train, roc_auc_val, roc_auc_test],\n",
+    "    \"AUC-PR\": [auc_pr_train, auc_pr_val, auc_pr_test]\n",
+    "})\n",
     "\n",
-    "# Define the number of columns for the grid\n",
-    "num_cols = 4  \n",
-    "\n",
-    "# Calculate the number of rows needed\n",
-    "num_rows = math.ceil(len(features_to_plot) / num_cols)\n",
-    "\n",
-    "# Set the figure size dynamically based on the grid size\n",
-    "plt.figure(figsize=(num_cols * 4, num_rows * 4))\n",
-    "\n",
-    "# Iterate over the features to plot\n",
-    "for i, feature in enumerate(features_to_plot):\n",
-    "    # Create a subplot in the grid \n",
-    "    plt.subplot(num_rows, num_cols, i + 1)\n",
-    "    \n",
-    "    # Create a scatterplot between the current feature and the misclassifications\n",
-    "    sns.scatterplot(data=df_test, x=feature, y=\"Misclassification\")\n",
-    "    \n",
-    "    # Add title and axis labels\n",
-    "    plt.title(f\"Misclassifications by {feature}\")\n",
-    "    plt.xlabel(f\"{feature}\")\n",
-    "    plt.ylabel(\"Misclassification\")\n",
-    "\n",
-    "# Adjust layout to prevent overlap\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "# Display comparison table (with 2 decimals)\n",
+    "round(final_model_comparison, 2)"
    ]
   },
   {
