In machine_learning_template.ipynb > Modeling > Final Model section: Add section Classification Report and Confusion Matrix

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7136,6 +7136,72 @@
   },
   {
    "cell_type": "markdown",
+   "id": "88f36b8f-b579-4e0f-83e9-a1ac4ad8d28f",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Classification Report and Confusion Matrix</h3>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Show classification report for training, validation, and test data.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b44f959d-8358-45bc-bab3-48ee8ef5c90f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Classification report\n",
+    "print(\"Classification Report: Training\")\n",
+    "print(classification_report(y_train, y_train_pred))\n",
+    "print(\"Classification Report: Validation\")\n",
+    "print(classification_report(y_val, y_val_pred))\n",
+    "print(\"Classification Report: Test\")\n",
+    "print(classification_report(y_test, y_test_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e450fc63-1b0c-4909-8f94-3d9af1a8aacc",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Plot confusion matrix for training, validation, and test data.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24f068b1-1d72-42a5-b91f-e4f1c8e2bfad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Plot confusion matrix for training, validation, and test data ---\n",
+    "# Create subplot grid \n",
+    "fig, axes = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "\n",
+    "# Add overall title\n",
+    "fig.suptitle(\"Final Model: Confusion Matrix\", fontsize=16, y=1.03)\n",
+    "\n",
+    "# Create confusion matrix subplots for training, validation, and test data (using helper function)\n",
+    "plot_confusion_matrix(y_train, y_train_pred, title=\"Training\", axes=axes[0])\n",
+    "plot_confusion_matrix(y_val, y_val_pred, title=\"Validation\", axes=axes[1])\n",
+    "plot_confusion_matrix(y_test, y_test_pred, title=\"Test\", axes=axes[2])\n",
+    "    \n",
+    "# Adjust layout to prevent overlap\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5e63402e-85d3-445c-be3c-074f350a97fc",
    "metadata": {},
    "source": [
