In machine_learning_template.ipynb > Modeling > Final Model section: Add section Overfitting with code to compare metrics between train, val, and test using a grouped bar plot

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7202,6 +7202,59 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e554a275-9163-4b84-ac6c-7f358cdba06d",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Overfitting</h3>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Diagnose overfitting of final model by comparing evaluation metrics between training, validation, and test data using a grouped bar plot.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21b5531a-ab46-480a-b005-d6637ec55668",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Overfitting grouped bar plot ---\n",
+    "# Melt the final_model_comparison DataFrame (from the \"Metrics\" section) for easier plotting \n",
+    "metric_df = pd.melt(final_model_comparison, id_vars=[\"Data\"], var_name=\"Metric\", value_name=\"Value\")\n",
+    "\n",
+    "# Create figure and axes\n",
+    "fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "\n",
+    "# Create grouped bar plot\n",
+    "sns.barplot(data=metric_df, x=\"Metric\", y=\"Value\", hue=\"Data\", palette=\"viridis\", ax=ax)\n",
+    "\n",
+    "# Add value labels \n",
+    "for container in ax.containers:\n",
+    "    ax.bar_label(container, fmt=\"%.2f\", padding=3, fontsize=10)\n",
+    "\n",
+    "# Customize plot \n",
+    "ax.set_title(\"Final Model: Overfitting\", fontsize=14)\n",
+    "ax.set_ylabel(\"Metric Value\", fontsize=12)\n",
+    "ax.set_xlabel(\"\")\n",
+    "ax.set_ylim(0, 1.05)  # slightly extend y-axis upper limit for better visibility of value labels\n",
+    "ax.set_yticks(np.arange(0, 1.1, 0.1))  # y-axis ticks from 0 to 1 in 0.1 steps\n",
+    "ax.tick_params(axis=\"x\", labelsize=12) \n",
+    "ax.tick_params(axis=\"y\", labelsize=10)\n",
+    "ax.legend(fontsize=11)\n",
+    "ax.grid(axis=\"y\", alpha=0.3)\n",
+    "\n",
+    "# Adjust the layout\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5e63402e-85d3-445c-be3c-074f350a97fc",
    "metadata": {},
    "source": [
