In machine_learning_template.ipynb > Modeling > Final Model > Feature Importance section: Update markdown in inline documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7332,7 +7332,7 @@
     "</div> \n",
     "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 <strong>Feature Importance Plot</strong>: Logistic Regression or Elastic Net Logistic Regression. \n",
+    "    📌 Plot feature importances for Logistic Regression or Elastic Net Logistic Regression. \n",
     "</div>"
    ]
   },
@@ -7343,9 +7343,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get the coefficients\n",
-    "# Note: final_model must be LogisticRegression \n",
-    "coefficients = final_model.coef_\n",
+    "# --- Feature importance plot for logistic regression or elastic net logistic regression ---\n",
+    "# Get the coefficients \n",
+    "coefficients = final_model.coef_  # final_model must be LogisticRegression \n",
     "\n",
     "# Get the feature names \n",
     "feature_names = X_train_transformed.columns  \n",
@@ -7375,7 +7375,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 <strong>Feature Importance Plot</strong>: Decision Tree or Random Forest.  \n",
+    "    📌 Plot feature importances for Decision Tree or Random Forest.  \n",
     "</div>"
    ]
   },
@@ -7386,9 +7386,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# --- Feature importance plot for decision tree or a random forest ---\n",
     "# Get the feature importances\n",
-    "# Note: final_model must be a decision tree or a random forest\n",
-    "importances = final_model.feature_importances_\n",
+    "importances = final_model.feature_importances_  # final_model must be DecisionTree or RandomForest\n",
     "\n",
     "# Get the feature names \n",
     "feature_names = X_train_transformed.columns  \n",
@@ -7418,7 +7418,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 <strong>Feature Importance Plot</strong>: XGBoost. \n",
+    "    📌 Plot feature importances for XGBoost. \n",
     "</div>"
    ]
   },
@@ -7429,9 +7429,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# --- Feature importance plot for XGBoost ---\n",
     "# Get the feature importances\n",
-    "# Note: final_model must be XGBoost model \n",
-    "importances = final_model.get_score(importance_type=\"gain\")\n",
+    "importances = final_model.get_score(importance_type=\"gain\")  # final_model must be XGBoost \n",
     "\n",
     "# Convert to DataFrame\n",
     "feature_importance_df = pd.DataFrame({\n",
