In loan_default_prediction.ipynb > Modeling > Final Model > Feature Importance section: Use fig and ax to create feature importance plot for decision tree or random forest

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7332,7 +7332,7 @@
     "</div> \n",
     "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Plot feature importances for Logistic Regression or Elastic Net Logistic Regression. \n",
+    "    📌 Visualize feature importances of Logistic Regression or Elastic Net Logistic Regression with a bar plot.  \n",
     "</div>"
    ]
   },
@@ -7375,25 +7375,25 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Plot feature importances for Decision Tree or Random Forest.  \n",
+    "    📌 Visualize feature importances of Decision Tree or Random Forest with a bar plot.  \n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6d2c62e-3471-45a1-8417-ff1cffb6d250",
+   "id": "1f861923-6bc6-4423-b56d-2a3557a6d683",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Feature importance plot for decision tree or a random forest ---\n",
-    "# Get the feature importances\n",
+    "# Get feature importances\n",
     "importances = final_model.feature_importances_  # final_model must be DecisionTree or RandomForest\n",
     "\n",
-    "# Get the feature names \n",
-    "feature_names = X_train_transformed.columns  \n",
+    "# Get feature names in proper format \n",
+    "feature_names = X_train_transformed.columns.str.title().str.replace(\"_\", \" \")\n",
     "\n",
-    "# Create a DataFrame to make it easier for Seaborn to plot\n",
+    "# Create a DataFrame for easier plotting\n",
     "feature_importance_df = pd.DataFrame({\n",
     "    \"feature\": feature_names,\n",
     "    \"importance\": importances\n",
@@ -7402,13 +7402,39 @@
     "# Sort features by importance\n",
     "feature_importance_df = feature_importance_df.sort_values(\"importance\", ascending=False)\n",
     "\n",
-    "# Create feature importance plot of the top 10 features\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "sns.barplot(x=\"importance\", y=\"feature\", data=feature_importance_df.head(10), palette=\"colorblind\")\n",
-    "plt.title(\"Top 10 Feature Importances\")\n",
-    "plt.xlabel(\"Importance\")\n",
-    "plt.ylabel(\"Features\")\n",
-    "plt.tight_layout()\n",
+    "# Create figure and axes\n",
+    "fig, ax = plt.subplots(figsize=(12, 6))\n",
+    "\n",
+    "# Create bar plot of top 10 features\n",
+    "sns.barplot(data=feature_importance_df.head(10), x=\"importance\", y=\"feature\", hue=\"feature\", palette=\"viridis\", ax=ax)\n",
+    "\n",
+    "# Customize plot\n",
+    "ax.set_title(\"Final Model: Top 10 Most Important Features\", fontsize=14)\n",
+    "ax.set_xlabel(\"Feature Importance\", fontsize=12)\n",
+    "ax.set_ylabel(\"\")\n",
+    "ax.tick_params(axis=\"both\", labelsize=12)\n",
+    "ax.grid(axis=\"x\", alpha=0.3)\n",
+    "\n",
+    "# Add value labels \n",
+    "for i, value in enumerate(feature_importance_df[\"importance\"].head(10)):\n",
+    "    ax.text(value + 0.001, i, f\"{value:.2f}\", va=\"center\", fontsize=12)\n",
+    "\n",
+    "# Adjust layout\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "# Save plot to file\n",
+    "os.makedirs(\"images\", exist_ok=True)  \n",
+    "image_path = os.path.join(\"images\", \"feature_importance_final.png\")  \n",
+    "if not os.path.exists(image_path):\n",
+    "    try:        \n",
+    "        fig.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "        print(f\"Feature importance plot saved successfully to '{image_path}'.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error saving feature importance plot: {e}\")\n",
+    "else:\n",
+    "    print(f\"Skip saving feature importance plot: '{image_path}' already exists.\")\n",
+    "\n",
+    "# Show the plot\n",
     "plt.show()"
    ]
   },
@@ -7418,7 +7444,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Plot feature importances for XGBoost. \n",
+    "    📌 Visualize feature importances of XGBoost with a bar plot.  \n",
     "</div>"
    ]
   },
