--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7347,10 +7347,10 @@
     "# Get the coefficients \n",
     "coefficients = final_model.coef_  # final_model must be LogisticRegression \n",
     "\n",
-    "# Get the feature names \n",
-    "feature_names = X_train_transformed.columns  \n",
+    "# Get feature names in proper format \n",
+    "feature_names = X_train_transformed.columns.str.title().str.replace(\"_\", \" \") \n",
     "\n",
-    "# Create a DataFrame to make it easier for Seaborn to plot\n",
+    "# Create a DataFrame for easier plotting\n",
     "feature_importance_df = pd.DataFrame({\n",
     "    \"feature\": feature_names,\n",
     "    \"importance\": np.abs(coefficients)\n",
@@ -7359,13 +7359,39 @@
     "# Sort features by importance\n",
     "feature_importance_df = feature_importance_df.sort_values(\"importance\", ascending=False)\n",
     "\n",
-    "# Create feature importance plot of the top 10 features\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "sns.barplot(x=\"importance\", y=\"feature\", data=feature_importance_df.head(10), palette=\"colorblind\")\n",
-    "plt.title(\"Top 10 Feature Importances\")\n",
-    "plt.xlabel(\"Importance (Absolute Coefficients)\")\n",
-    "plt.ylabel(\"Features\")\n",
-    "plt.tight_layout()\n",
+    "# Create figure and axes\n",
+    "fig, ax = plt.subplots(figsize=(12, 6))\n",
+    "\n",
+    "# Create bar plot of top 10 features\n",
+    "sns.barplot(data=feature_importance_df.head(10), x=\"importance\", y=\"feature\", hue=\"feature\", palette=\"viridis\", ax=ax)\n",
+    "\n",
+    "# Customize plot\n",
+    "ax.set_title(\"Final Model: Top 10 Most Important Features\", fontsize=14)\n",
+    "ax.set_xlabel(\"Feature Importance (Absolute Coefficients)\", fontsize=12)\n",
+    "ax.set_ylabel(\"\")\n",
+    "ax.tick_params(axis=\"both\", labelsize=12)\n",
+    "ax.grid(axis=\"x\", alpha=0.3)\n",
+    "\n",
+    "# Add value labels \n",
+    "for i, value in enumerate(feature_importance_df[\"importance\"].head(10)):\n",
+    "    ax.text(value + 0.001, i, f\"{value:.2f}\", va=\"center\", fontsize=12)\n",
+    "\n",
+    "# Adjust layout\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "# Save plot to file\n",
+    "os.makedirs(\"images\", exist_ok=True)  \n",
+    "image_path = os.path.join(\"images\", \"feature_importance_final.png\")  \n",
+    "if not os.path.exists(image_path):\n",
+    "    try:        \n",
+    "        fig.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "        print(f\"Feature importance plot saved successfully to '{image_path}'.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error saving feature importance plot: {e}\")\n",
+    "else:\n",
+    "    print(f\"Skip saving feature importance plot: '{image_path}' already exists.\")\n",
+    "\n",
+    "# Show the plot\n",
     "plt.show()"
    ]
   },
@@ -7459,7 +7485,7 @@
     "# Get the feature importances\n",
     "importances = final_model.get_score(importance_type=\"gain\")  # final_model must be XGBoost \n",
     "\n",
-    "# Convert to DataFrame\n",
+    "# Create a DataFrame for easier plotting\n",
     "feature_importance_df = pd.DataFrame({\n",
     "    \"feature\": list(importances.keys()),\n",
     "    \"importance\": list(importances.values())\n",
@@ -7468,13 +7494,39 @@
     "# Sort features by importance\n",
     "feature_importance_df = feature_importance_df.sort_values(\"importance\", ascending=False)\n",
     "\n",
-    "# Create feature importance plot of the top 10 features\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "sns.barplot(x=\"importance\", y=\"feature\", data=feature_importance_df.head(10), palette=\"colorblind\")\n",
-    "plt.title(\"Top 10 Feature Importances\")\n",
-    "plt.xlabel(\"Importance\")\n",
-    "plt.ylabel(\"Features\")\n",
-    "plt.tight_layout()\n",
+    "# Create figure and axes\n",
+    "fig, ax = plt.subplots(figsize=(12, 6))\n",
+    "\n",
+    "# Create bar plot of top 10 features\n",
+    "sns.barplot(data=feature_importance_df.head(10), x=\"importance\", y=\"feature\", hue=\"feature\", palette=\"viridis\", ax=ax)\n",
+    "\n",
+    "# Customize plot\n",
+    "ax.set_title(\"Final Model: Top 10 Most Important Features\", fontsize=14)\n",
+    "ax.set_xlabel(\"Feature Importance\", fontsize=12)\n",
+    "ax.set_ylabel(\"\")\n",
+    "ax.tick_params(axis=\"both\", labelsize=12)\n",
+    "ax.grid(axis=\"x\", alpha=0.3)\n",
+    "\n",
+    "# Add value labels \n",
+    "for i, value in enumerate(feature_importance_df[\"importance\"].head(10)):\n",
+    "    ax.text(value + 0.001, i, f\"{value:.2f}\", va=\"center\", fontsize=12)\n",
+    "\n",
+    "# Adjust layout\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "# Save plot to file\n",
+    "os.makedirs(\"images\", exist_ok=True)  \n",
+    "image_path = os.path.join(\"images\", \"feature_importance_final.png\")  \n",
+    "if not os.path.exists(image_path):\n",
+    "    try:        \n",
+    "        fig.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "        print(f\"Feature importance plot saved successfully to '{image_path}'.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error saving feature importance plot: {e}\")\n",
+    "else:\n",
+    "    print(f\"Skip saving feature importance plot: '{image_path}' already exists.\")\n",
+    "\n",
+    "# Show the plot\n",
     "plt.show()"
    ]
   },
